--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "url": "https://github.com/mozfreddyb/eslint-plugin-no-wildcard-postmessage/issues"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "mocha": "^3.2.0"
   },
-  "dependencies": {
-    "eslint": "^3.15.0"
-  },
+  "dependencies": {},
   "homepage": "https://github.com/mozfreddyb/eslint-plugin-no-wildcard-postmessage/",
   "keywords": [
     "eslint",
@@ -28,7 +27,7 @@
     "type": "git",
     "url": "https://github.com/mozfreddyb/eslint-plugin-no-wildcard-postmessage/issues"
   },
-  "scripts":{
+  "scripts": {
     "test": "./node_modules/.bin/mocha tests/rules/",
     "lint": "node_modules/.bin/eslint index.js lib/**/*.js tests/**/*.js"
   }
