chore: update for modern Node
* Declare currently-supported Node versions as minimum compatible with the project, in order to safely take advantage of modern Node features
* Add `eslint-plugin-node` to ensure we're using Node feature based on supported Node versions
* Refactor code to make use of new Node features for cleaner code
* Update Node versions tested against in CI

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,27 +1,17 @@
 {
-    "rules": {
-        "indent": [
-            2,
-            2
-        ],
-        "quotes": [
-            2,
-            "double"
-        ],
-        "linebreak-style": [
-            2,
-            "unix"
-        ],
-        "semi": [
-            2,
-            "always"
-        ]
-    },
-    "env": {
-        "es6": true,
-        "browser": true,
-        "node": true,
-    },
-    "extends": "eslint:recommended"
+  "extends": ["eslint:recommended", "plugin:node/recommended"],
+  "rules": {
+    "indent": ["error", 2],
+    "quotes": ["error", "double"],
+    "linebreak-style": ["error", "unix"],
+    "semi": ["error", "always"]
+  },
+  "overrides": [
+    {
+      "files": ["tests/**/*.js"],
+      "rules": {
+        "node/no-unpublished-require": "off"
+      }
+    }
+  ]
 }
-
