--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
+    "eslint-plugin-node": "^11.1.0",
     "mocha": "^3.2.0"
   },
   "dependencies": {},
@@ -30,5 +31,8 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha tests/rules/",
     "lint": "node_modules/.bin/eslint index.js lib/**/*.js tests/**/*.js"
+  },
+  "engines": {
+    "node": ">= 10"
   }
 }
