--- a/package.json
+++ b/package.json
@@ -2,18 +2,16 @@
   "name": "eslint-plugin-no-wildcard-postmessage",
   "description": "custom ESLint rule to disallows calling postMessage to wildcard targets",
   "version": "0.1.3",
-  "author": {
-    "name": "Frederik Braun"
-  },
+  "author": "eslint-plugin-no-wildcard-postmessage contributors",
   "bugs": {
     "url": "https://github.com/mozfreddyb/eslint-plugin-no-wildcard-postmessage/issues"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-node": "^11.1.0",
     "mocha": "^3.2.0"
   },
-  "dependencies": {
-    "eslint": "^3.15.0"
-  },
+  "dependencies": {},
   "homepage": "https://github.com/mozfreddyb/eslint-plugin-no-wildcard-postmessage/",
   "keywords": [
     "eslint",
@@ -28,8 +26,11 @@
     "type": "git",
     "url": "https://github.com/mozfreddyb/eslint-plugin-no-wildcard-postmessage/issues"
   },
-  "scripts":{
+  "scripts": {
     "test": "./node_modules/.bin/mocha tests/rules/",
     "lint": "node_modules/.bin/eslint index.js lib/**/*.js tests/**/*.js"
+  },
+  "engines": {
+    "node": ">= 10"
   }
 }
